# technological-merit-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_documents.py
config/profiles/finep_mais_inovacao_tecnologias_digitais/: profile.yaml
docs/action-plans/: action-plan-f01-1-document-model-and-migration.md  action-plan-f01-2-secure-local-storage.md
docs/architecture/: architecture-vision-v0.1.md
docs/checkpoints/: checkpoint-00-definition-approved.md  checkpoint-01-foundation-validated.md  checkpoint-01a-public-code-private-data.md
docs/context/: context-pack-v0.1.md
docs/features/: feature-intent-f01-1-document-model-and-migration.md  feature-intent-f01-2-secure-local-storage.md  feature-intent-f01-secure-document-ingestion.md
docs/guidelines/: technical-guidelines-v0.1.md
docs/mcp/: mcp-plus-001-foundation-ingestion.md  mcp-plus-001-v1.1-foundation-ingestion.md
docs/planning/: execution-plan-v0.1.md
docs/policy/: data-policy-i001.md
docs/prd/: prd-lite-v0.1.md
scripts/: verify_i001_scope.sh
src/merit_assistant/: __init__.py
src/merit_assistant/api/: main.py  schemas.py
src/merit_assistant/config/: settings.py
src/merit_assistant/domain/: entities.py
src/merit_assistant/profiles/: loader.py
tests/: test_document_model.py  test_health.py  test_local_document_storage.py  test_profile_loader.py  test_settings.py
ui/: app.py
(+5 files in other folders)
