[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "technological-merit-assistant"
version = "0.1.0"
description = "Assistente privado para avaliação de mérito tecnológico"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Andre Cataldo" }]
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "PyMuPDF>=1.24,<2",
  "PyYAML>=6.0,<7",
  "sqlalchemy>=2.0,<3",
  "streamlit>=1.39,<2",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/merit_assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["merit_assistant"]
